[package]
authors = ["yuudi"]
edition = "2018"
name = "tcping"
version = "0.1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }

[profile.release]
strip = true
lto = true
panic = "abort"
